data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1354.wast
;; 5. **Test Description:**    - **Test Name:** Conditional Import Branch Test    - **Objective:** Ensure `br` within an `if` condition targeting an imported function is correctly executed.    - **Constraint:** Checks correct behavior of conditional branches within an if-else structure involving imports.    - **Relation to Incorrect Handling:** Validates that control flow remains accurate when branching to conditional labels in imported functions.

(assert_invalid
  (module
    (import "env" "external" (func $imported_func (param i32) (result i32)))
    (func $test_conditional_import (param i32) (result i32)
      (if (result i32)
        (i32.eqz (local.get 0))
        (then (br 0))
        (else (call $imported_func (local.get 0)))
      )
    )
  )
  "type mismatch"
)